# voidstar

./: .clang-format  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: Findlibffi.cmake  config.cmake.in
docs/: how-it-works.md  reference.md
docs/snippets/: listener_bank.h  tagged_listener.h
example/: CMakeLists.txt
example/background_jobs/: CMakeLists.txt  README.md  badlib.cpp  badlib.h  main.cpp
include/: libstupid.h  voidstar.h
include/voidstar/: call_signature.h  error.h  layout.h
include/voidstar/detail/: call_signature.h  misc.h
include/voidstar/detail/ffi/: cif.h  closure.h  error.h  type.h
include/voidstar/detail/ffi/type/: base.h  composite.h  fundamental.h  layout.h
packaging/conan/: README.md  create_dev_package.sh
packaging/conan/voidstar/all/: conandata.yml  conanfile.py
packaging/conan/voidstar/all/test_package/: CMakeLists.txt
packaging/conan/voidstar/all/test_package/src/: example.cpp
src/: ffi.cpp  libstupid.cpp  main.cpp
test/: CMakeLists.txt  closure.cpp  closure.static.cpp  types.cpp
